# wty

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  TODO.md  index.html  justfile
assets/: languages.json  tag_bank_term.json
benches/: benchmark.rs  log.txt
benches/fixtures/kaikki/: de-de-extract.jsonl  el-el-extract.jsonl
css/: index.html
dictionaries/: index.html
docs/: dictionaries.md  download.md
docs/javascripts/: download.js
download/: index.html
javascripts/: download.js
language/: index.html
scripts/: build.py  generate_docs.py  release.py  tags.py
search/: search_index.json
src/: cli.rs  download.rs  lang.rs  lib.rs  main.rs  path.rs  utils.rs
src/dict/: core.rs  locale.rs  main.rs  mod.rs  other.rs  release.rs  writer.rs
src/models/: kaikki.rs  yomitan.rs
src/tags/: mod.rs  tags_constants.rs
stylesheets/: extra.css
tags/: index.html
tests/: index.html  registry.json  registry_timestamps.json  tests.rs  update_tests.py
tests/dict/cs/en/temp-main/diagnostics/: tags.json
tests/dict/cs/en/temp-main/dict/: term_bank_1.json
tests/dict/cs/en/temp-main/tidy/: cs-en-lemmas.json
tests/dict/cs/en/temp/tidy/: cs-en-lemmas.json
tests/dict/de/cs/temp-glossary/dict/: term_bank_1.json
tests/dict/de/de/temp-main/diagnostics/: pos.json  tags.json
tests/dict/de/de/temp-main/dict/: term_bank_1.json
tests/dict/de/de/temp-main/tidy/: de-de-forms.json  de-de-lemmas.json
tests/dict/de/de/temp/tidy/: de-de-lemmas.json
tests/dict/de/el/temp-glossary/dict/: term_bank_1.json
tests/dict/de/en/temp-glossary/dict/: term_bank_1.json
tests/dict/de/en/temp-main/diagnostics/: tags.json
tests/dict/de/en/temp-main/dict/: term_bank_1.json
tests/dict/de/en/temp-main/tidy/: de-en-lemmas.json
tests/dict/de/en/temp/tidy/: de-en-lemmas.json
tests/dict/de/es/temp-glossary/dict/: term_bank_1.json
tests/dict/de/fr/temp-glossary/dict/: term_bank_1.json
tests/dict/de/grc/temp-glossary/dict/: term_bank_1.json
tests/kaikki/: de-de-extract.jsonl  el-el-extract.jsonl  el-en-extract.jsonl  en-de-extract.jsonl  en-es-extract.jsonl  ja-en-extract.jsonl  ja-ja-extract.jsonl  ru-en-extract.jsonl  ru-ru-extract.jsonl  zh-zh-extract.jsonl
update/: index.html
(+113 files in other folders)
