[package]
name = "kty"
version = "0.3.0"
edition = "2024"

[lib]
name = "kty"
path = "src/lib.rs"

[[bin]]
name = "kty"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["now"] }
clap = { version = "4.5.51", features = ["derive"] }
fxhash = "0.2.1"
indexmap = { version = "2.12.0", features = ["serde"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unicode-normalization = "0.1.25"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

# Optional

# Only used to ungzip the download
flate2 = { version = "1.1.5", optional = true }
# We are not using the gzip feature; instead, we directly use flat2
# https://docs.rs/ureq/latest/ureq/#features
ureq = { version = "3.1.4", default-features = false, features = ["rustls"], optional = true }

[profile.release]
debug = true
panic = "abort"

[features]
default = ["html"]

# Provide download utilities for kaikki/wiktextract generated jsonlines
html = ["ureq", "flate2"]
